--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,17 +3,14 @@ site_name: scifi-boekenclub
 nav:
   - Introduction: index.md
   - Getting Started: getting_started.md
-  - Bundle Deployment: bundle_deployment.md
   - List of Commands: commands.md
   - CI/CD: cicd.md
   - Resources:
-      - Jobs: jobs/index.md
-      - Notebooks: notebooks/index.md
       - Package: scifi.md
   - Tests:
-      - Configuration: tests/test_configuration.md
       - Tests: tests/tests.md
-      - Coverage: tests/coverage_report.md
+      - Test Coverage: tests/coverage_report.md
+      - Test Configuration: tests/test_configuration.md
   - Release: release.md
   - Coding Standards: coding_standards.md
   - CHANGELOG: CHANGELOG.md
