fix(semantic-release): update semantic release pipeline to use Node.js package

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-laest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       issues: write
@@ -20,8 +20,8 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v4
         with:
-          ref: 'main'     # Ensure you're on the main branch
-          fetch-depth: 0  # Fetch all history and tags
+          ref: 'main'
+          fetch-depth: 0
 
       # Step 2: Setup Node.js
       - name: Setup Node.js
@@ -51,15 +51,15 @@ jobs:
 
       # Step 6: Generate CHANGELOG
       - name: Generate CHANGELOG
-        uses: orhun/git-cliff-action@v4.2.0
+        uses: orhun/git-cliff-action@v4.3.0
         id: git-cliff-changelog
         with:
-          config: pyproject.toml
+          config: cliff.toml
         env:
-          OUTPUT: docs/CHANGELOG.md
+          OUTPUT: CHANGELOG.md
           GITHUB_REPO: ${{ github.repository }}
 
-      # Step 7: Commit the CHANGELOG after it is generated (only if there are changes)
+      # Step 7: Commit the CHANGELOG after it is generated
       - name: Commit CHANGELOG
         id: commit-changelog
         run: |
@@ -67,18 +67,14 @@ jobs:
           git config user.name 'github-actions[bot]'
           git config user.email 'actions@github.com'
 
-          # Write the latest version to the docs
-          VERSION=$(git tag --sort=-v:refname | head -n 1 | sed 's/^v//')
-          sed -i "s/^version = .*/version = \"$VERSION\"/" pyproject.toml
-
-          # Add generated CHANGELOG and updated pyproject.toml
-          git add docs/CHANGELOG.md pyproject.toml
+          # Add generated CHANGELOG and updated docs
+          git add docs/CHANGELOG.md
 
           # Check if there are any changes to commit
           if git diff --cached --quiet; then
             echo "No changes to commit, skipping commit."
           else
-            # Commit the changes
+            # Commit the generated CHANGELOG and updated README
             git commit -m "chore(release): update CHANGELOG for version $VERSION [automated]"
             # Fetching and rebasing onto the latest main branch before pushing
             git fetch origin
