--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     -   id: conventional-pre-commit
         stages: [commit-msg]
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -20,7 +20,7 @@ repos:
     -   id: check-json
     -   id: check-xml
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.6.8
+    rev: v0.6.9
     hooks:
     -   id: ruff
         args:
@@ -63,4 +63,4 @@ repos:
           '
         language: system
         pass_filenames: false
-        stages: [commit]
+        stages: [pre-commit]
