--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,66 +1,68 @@
 repos:
 -   repo: https://gitlab.com/vojko.pribudic.foss/pre-commit-update
-    rev: v0.5.1post1
+    rev: v0.7.0
     hooks:
     -   id: pre-commit-update
         args:
         -   --verbose
 -   repo: https://github.com/compilerla/conventional-pre-commit
-    rev: v3.4.0
+    rev: v4.2.0
     hooks:
     -   id: conventional-pre-commit
         stages: [commit-msg]
+-   repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.7.10
+    hooks:
+    -   id: uv-lock
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
-        exclude_types: [svg]
     -   id: check-yaml
     -   id: check-json
     -   id: check-xml
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.6.9
+    rev: v0.11.12
     hooks:
-    -   id: ruff
+    -   id: ruff-check
         args:
-        -   --config=pyproject.toml
         -   --fix
         -   --exit-non-zero-on-fix
         types_or: [python, pyi, jupyter]
     -   id: ruff-format
-        args:
-        -   --config=pyproject.toml
         types_or: [python, pyi, jupyter]
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
+    rev: v1.16.0
     hooks:
     -   id: mypy
+        language_version: python3.11
         args:
-        -   --strict
-        -   --allow-untyped-decorators
+        -   --config-file=pyproject.toml
         -   --ignore-missing-imports
-        -   --disable-error-code=name-defined
         additional_dependencies:
         -   types-pytz
-        exclude: scratch
+        -   types-python-dateutil
+        exclude: "scratch"
+-   repo: https://github.com/PyCQA/bandit
+    rev: 1.8.3
+    hooks:
+    -   id: bandit
+        args:
+        -   --configfile=pyproject.toml
+        -   --severity-level=medium
+        additional_dependencies:
+        -   bandit[toml]
 -   repo: https://github.com/jsh9/pydoclint
-    rev: 0.5.9
+    rev: 0.6.7
     hooks:
     -   id: pydoclint
-        args:
-        -   --config=pyproject.toml
--   repo: local
+-   repo: https://github.com/sqlfluff/sqlfluff
+    rev: 3.4.0
     hooks:
-    -   id: pytest-unit-tests
-        name: pytest-unit-tests
-        entry: >
-          bash -c '
-            uv run pytest -v tests --cov=src --junitxml=docs/tests/coverage/pytest_coverage.xml &&
-            uv run coverage xml -o docs/tests/coverage/coverage.xml &&
-            uv run genbadge coverage -i docs/tests/coverage/coverage.xml -o docs/assets/badge-coverage.svg &&
-            uv run genbadge tests -i docs/tests/coverage/pytest_coverage.xml -o docs/assets/badge-tests.svg
-          '
-        language: system
-        pass_filenames: false
-        stages: [pre-commit]
+    -   id: sqlfluff-lint
+    -   id: sqlfluff-fix
+-   repo: https://github.com/gitleaks/gitleaks
+    rev: v8.27.0
+    hooks:
+    -   id: gitleaks
