refactor: get everything in line with modern standards

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: github-actions
     directory: .
     schedule:
-      interval: daily
+      interval: weekly
     groups:
       actions-deps:
         patterns:
@@ -11,15 +11,4 @@ updates:
   - package-ecosystem: pip
     directory: .
     schedule:
-      interval: daily
-    groups:
-      dev-deps:
-        dependency-type: development
-        exclude-patterns:
-          - pandas* # Fixed at Databricks Runtime 14.3 LTS
-          - numpy* # Fixed at Databricks Runtime 14.3 LTS
-      prod-deps:
-        dependency-type: production
-        exclude-patterns:
-          - pandas* # Fixed at Databricks Runtime 14.3 LTS
-          - numpy* # Fixed at Databricks Runtime 14.3 LTS
+      interval: weekly
