--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,25 +25,34 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+        uses: astral-sh/setup-uv@v6
 
       - name: Install dependencies
-        run: uv sync
+        run: uv sync --group dev
 
       - name: Run formatting checks
         run: |
+          set -e
+          echo "Running ruff"
           uv run ruff check --output-format=github .
+          echo "Running mypy"
           uv run mypy .
+          echo "Running pydoclint"
           uv run pydoclint .
+          echo "Running bandit"
+          uv run bandit --configfile=pyproject.toml --severity-level=medium -r .
+          echo "Running sqlfluff"
+          uv run sqlfluff lint .
+          echo "Formatting checks passed ✅"
+
+      - name: Run tests with coverage report
+        run: |
+          uv run pytest -v tests --cov=src --cov-report term
+        env:
+          PYTHONPATH: ${{ github.workspace }}/src/scifi
 
       - name: Build and check package
         run: |
           uv build
           tar -xvzf dist/scifi-*.tar.gz
           diff -r -x __pycache__ src/scifi scifi-*/src/scifi
-
-      - name: Run unit tests with coverage report
-        run: |
-          uv run pytest -v tests --cov=src tests --cov-report term
-        env:
-          PYTHONPATH: ${{ github.workspace }}/src/scifi
