--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "polars>=1.30.0",
     "streamlit>=1.45.1",
     "plotly>=6.1.2",
+    "seaborn>=0.13.2",
+    "scipy>=1.15.3",
 ]
 
 
