--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     -   id: conventional-pre-commit
         stages: [commit-msg]
 -   repo: https://github.com/astral-sh/uv-pre-commit
-    rev: 0.7.10
+    rev: 0.7.11
     hooks:
     -   id: uv-lock
 -   repo: https://github.com/pre-commit/pre-commit-hooks
@@ -32,18 +32,18 @@ repos:
         types_or: [python, pyi, jupyter]
     -   id: ruff-format
         types_or: [python, pyi, jupyter]
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.16.0
-    hooks:
-    -   id: mypy
-        language_version: python3.11
-        args:
-        -   --config-file=pyproject.toml
-        -   --ignore-missing-imports
-        additional_dependencies:
-        -   types-pytz
-        -   types-python-dateutil
-        exclude: "scratch"
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v1.16.0
+#     hooks:
+#     -   id: mypy
+#         language_version: python3.11
+#         args:
+#         -   --config-file=pyproject.toml
+#         -   --ignore-missing-imports
+#         additional_dependencies:
+#         -   types-pytz
+#         -   types-python-dateutil
+#         exclude: "scratch"
 -   repo: https://github.com/PyCQA/bandit
     rev: 1.8.3
     hooks:
