--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
     -   id: check-json
     -   id: check-xml
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.11.12
+    rev: v0.11.13
     hooks:
     -   id: ruff-check
         args:
@@ -32,17 +32,13 @@ repos:
         types_or: [python, pyi, jupyter]
     -   id: ruff-format
         types_or: [python, pyi, jupyter]
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.16.0
+-   repo: local
     hooks:
-    -   id: mypy
-        language_version: python3.11
-        args:
-        -   --config-file=pyproject.toml
-        -   --ignore-missing-imports
-        additional_dependencies:
-        -   types-pytz
-        -   types-python-dateutil
+    -   id: ty
+        name: ty
+        entry: uvx ty check
+        language: system
+        types: [python]
         exclude: "scratch"
 -   repo: https://github.com/PyCQA/bandit
     rev: 1.8.3
