chore: enble local ty hook in pre-commit, enable ty check upon CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,18 +30,9 @@ jobs:
       - name: Install dependencies
         run: uv sync --group dev
 
-      - name: Run formatting checks
-        run: |
-          set -e
-          echo "Running ruff"
-          uv run ruff check --output-format=github .
-          echo "Running mypy"
-          uv run mypy .
-          echo "Running pydoclint"
-          uv run pydoclint .
-          echo "Running bandit"
-          uv run bandit --configfile=pyproject.toml --severity-level=medium -r .
-          echo "Formatting checks passed ✅"
+      - name: Run pre-commit checks
+        uses: pre-commit-ci/lite-action@v1.1.0
+        if: always()
 
       - name: Run tests with coverage report
         run: |
