--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,14 +32,6 @@ repos:
         types_or: [python, pyi, jupyter]
     -   id: ruff-format
         types_or: [python, pyi, jupyter]
-# -   repo: local
-#     hooks:
-#     -   id: ty
-#         name: ty
-#         entry: uvx ty check
-#         language: system
-#         types: [python]
-#         exclude: "scratch"
 -   repo: https://github.com/PyCQA/bandit
     rev: 1.8.3
     hooks:
@@ -53,12 +45,15 @@ repos:
     rev: 0.6.7
     hooks:
     -   id: pydoclint
--   repo: https://github.com/sqlfluff/sqlfluff
-    rev: 3.4.0
-    hooks:
-    -   id: sqlfluff-lint
-    -   id: sqlfluff-fix
 -   repo: https://github.com/gitleaks/gitleaks
-    rev: v8.27.0
+    rev: v8.27.2
     hooks:
     -   id: gitleaks
+-   repo: local
+    hooks:
+    -   id: ty
+        name: ty check
+        entry: uvx ty check .
+        language: system
+        types: [python]
+        exclude: "scratch"
