--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,7 @@ on:
 
 jobs:
   ci:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    defaults:
-      run:
-        shell: bash
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -35,10 +28,7 @@ jobs:
         if: always()
 
       - name: Run tests with coverage report
-        run: |
-          uv run pytest -v tests --cov=src --cov-report term
-        env:
-          PYTHONPATH: ${{ github.workspace }}/src/scifi
+        run: uv run pytest -v tests --cov=src --cov-report term
 
       - name: Build and check package
         run: |
