--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,7 +44,7 @@ repos:
     hooks:
     -   id: ty
         name: ty check
-        entry: uvx ty check .
+        entry: uv run ty check .
         language: system
         types: [python]
         exclude: "scratch"
