--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ ignore = [
     "PLR2004",  # Magic value used in comparison"
     "S608",     # "Possible SQL injection vector through string-based query construction."
     "T201",     # "`print` found."
+    "TRY300",   # "Consider moving this statement to an `else` block."
 ]
 unfixable = [
     "F401",     # "Unused import." Disabled since it makes linting/formatting notebooks messy and impossible.
