--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,12 @@ requires-python = ">=3.12"
 dependencies = [
     "defusedxml>=0.7.1",
     "ipykernel>=6.30.0",
-    "matplotlib>=3.10.3",
+    "matplotlib>=3.10.5",
     "nbformat>=5.10.4",
     "openpyxl>=3.1.5",
     "pandas-stubs>=2.3.0.250703",
     "plotly>=6.2.0",
-    "polars>=1.31.0",
+    "polars>=1.32.0",
     "scipy>=1.16.1",
     "seaborn>=0.13.2",
     "streamlit>=1.47.1",
@@ -30,8 +30,8 @@ dev = [
     "pytest-cov>=6.2.1",
     "pytest-mock>=3.14.1",
     "pytest>=8.4.1",
-    "ruff>=0.12.5",
-    "ty>=0.0.1a15",
+    "ruff>=0.12.7",
+    "ty>=0.0.1a16",
 ]
 
 [tool.uv]
@@ -39,6 +39,10 @@ package = true
 
 [tool.ty.environment]
 python-version = "3.12"
+
+[tool.ty.rules]
+unresolved-attribute = "ignore"  # Pandas type stubs issues
+no-matching-overload = "ignore"  # Pandas type stubs issues
 
 [tool.ruff]
 target-version = "py312"
@@ -71,6 +75,7 @@ ignore = [
     "S608",     # "Possible SQL injection vector through string-based query construction."
     "T201",     # "`print` found."
     "TRY300",   # "Consider moving this statement to an `else` block."
+    "DTZ011",   # "datetime.date.today() used"
 ]
 unfixable = [
     "F401",     # "Unused import." Disabled since it makes linting/formatting notebooks messy and impossible.
@@ -85,7 +90,6 @@ unfixable = [
     "PLR2004",  # "Magic value used in comparison, consider replacing with a constant variable."
     "S101",     # "Use of `assert` detected."
 ]
-
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
