--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pre-commit>=4.2.0",
+    "prek>=0.2.27",
     "pydoclint>=0.6.6",
     "pytest-cov>=6.2.1",
     "pytest-mock>=3.14.1",
